# cirada_senpy

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  codecov.yaml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: unit_tests.yml  unittests.yml
cirada_senpy/: science.py
cirada_senpy/cli/: commands.py
cirada_senpy/core/: __init__.py  catalog.py  collector.py  flux_history.py  handler.py  query.py  surveys.py  utils.py  variability.py
cirada_senpy/io/: data_file.py
examples/: gallery.py
senpy/cli/: commands.py
senpy/core/: __init__.py  coords.py  flux_history.py  handler.py  sed.py
tests/unit/cli/: test_command.py
tests/unit/core/: test_catalog.py  test_collector.py  test_coords.py  test_flux_history.py  test_handler.py  test_query.py  test_sed.py  test_surveys.py  test_utils.py  test_variability.py
tests/unit/data/: Orion.tgz  input_example.csv  targets_coords.csv
tests/unit/io/: test_data_file.py
tests/unit/science/: test_science.py
tests/unittest/core/: test_handler.py
tests/unittest/data/: input_example.csv
