[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "senpy"
dynamic = ["version"]
description = "Survey ENrichment in PYthon — batch-download multi-survey astronomical cutouts (VLASS, NVSS, FIRST, and more) and measure fluxes, spectral indices, variability, and flux histories."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "JavierArredondo", email = "javier.arredondo.c@usach.cl" }]
keywords = ["astronomy", "radio", "vlass", "cirada", "cutouts", "fits"]
dependencies = [
    "astropy>=5.0",
    "astroquery>=0.4.11",
    "click>=8.1.3",
    "pandas>=1.3.4",
    "requests>=2.26",
    "tqdm>=4.62",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.7"]

[project.scripts]
senpy = "senpy.cli.commands:cli"

[project.urls]
Homepage = "https://github.com/JavierArredondo/senpy"
Repository = "https://github.com/JavierArredondo/senpy"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "coverage>=7.0",
    "pre-commit>=3.5",
    "isort>=5.10",
    "black>=24.0",
]

[tool.hatch.version]
path = "senpy/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["senpy"]

[tool.isort]
profile = "black"
force_alphabetical_sort = true
force_single_line = false
skip_gitignore = true
force_to_top = true
line_length = 120
src_paths = ["senpy", "tests"]
